References